<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/pref_location"
        android:key="@string/pref_key"
        android:defaultValue="@string/pref_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="Units"
        android:key="@string/pref_units_key"
        android:entries="@array/unit_entries"
        android:entryValues="@array/unit_values"
        android:defaultValue="@string/units_default" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>